--- a/index.html
+++ b/index.html
@@ -1,122 +1,172 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
 <head>
-  <meta charset="UTF-8">
+  <meta charset="UTF-8" />
+  <meta name="viewport" content="width=device-width, initial-scale=1.0" />
   <title>歷史上的展旭</title>
   <style>
     body {
       margin: 0;
       font-family: Arial, sans-serif;
       display: flex;
+      flex-direction: column;
       height: 100vh;
     }
-    .sidebar {
-      width: 250px;
-      background: #2c3e50;
-      color: white;
-      overflow-y: auto;
+
+    header {
+      background: #333;
+      color: #fff;
       padding: 10px;
+      text-align: center;
     }
-    .month {
-      cursor: pointer;
-      padding: 8px;
-      background: #34495e;
-      margin-bottom: 4px;
-      border-radius: 4px;
-    }
-    .month:hover {
-      background: #3d566e;
-    }
-    .dates {
+
+    .menu-toggle {
       display: none;
-      padding-left: 15px;
-    }
-    .date {
+      background: #333;
+      color: #fff;
+      padding: 10px;
       cursor: pointer;
-      padding: 4px;
+      text-align: center;
     }
-    .date:hover {
-      background: #3d566e;
-      border-radius: 3px;
+
+    .container {
+      flex: 1;
+      display: flex;
+      overflow: hidden;
     }
+
+    nav {
+      width: 250px;
+      background: #f4f4f4;
+      border-right: 1px solid #ddd;
+      overflow-y: auto;
+      transition: transform 0.3s ease-in-out;
+    }
+
+    nav ul {
+      list-style: none;
+      margin: 0;
+      padding: 0;
+    }
+
+    nav li {
+      padding: 10px;
+      cursor: pointer;
+      border-bottom: 1px solid #ddd;
+    }
+
+    nav li:hover {
+      background: #ddd;
+    }
+
+    nav li ul li {
+      padding-left: 20px;
+      background: #eee;
+      border-bottom: none;
+    }
+
+    nav li ul li:hover {
+      background: #ddd;
+    }
+
     .content {
       flex: 1;
       padding: 20px;
-      background: #ecf0f1;
       overflow-y: auto;
     }
+
     .record {
-      background: white;
-      margin-bottom: 10px;
-      padding: 10px;
-      border-radius: 5px;
-      box-shadow: 0 2px 4px rgba(0,0,0,0.1);
+      margin-bottom: 20px;
+      padding-bottom: 10px;
+      border-bottom: 1px solid #ccc;
     }
-    a {
-      color: #2980b9;
-      text-decoration: none;
-    }
-    a:hover {
-      text-decoration: underline;
-    }
-    img {
+
+    .record img {
       max-width: 100%;
-      border-radius: 5px;
-      margin-top: 5px;
+      height: auto;
+      display: block;
+      margin-top: 10px;
     }
-    iframe {
-      width: 100%;
-      height: 400px;
-      border: none;
-      border-radius: 5px;
-      margin-top: 5px;
+
+    /* 手機版 */
+    @media (max-width: 768px) {
+      .menu-toggle {
+        display: block;
+      }
+      .container {
+        flex-direction: column;
+      }
+      nav {
+        position: absolute;
+        top: 0;
+        left: 0;
+        height: 100%;
+        transform: translateX(-100%);
+        z-index: 1000;
+      }
+      nav.open {
+        transform: translateX(0);
+      }
     }
   </style>
 </head>
 <body>
-  <div class="sidebar" id="sidebar"></div>
-  <div class="content" id="content">
-    <h2>歡迎來到「歷史上的展旭」，請從左側選擇月份與日期</h2>
+  <header>
+    <h1>歷史上的展旭</h1>
+  </header>
+
+  <div class="menu-toggle">☰ 選單</div>
+
+  <div class="container">
+    <nav id="sidebar">
+      <ul id="monthList"></ul>
+    </nav>
+
+    <div class="content" id="content">
+      <p>請選擇日期以查看展旭紀錄</p>
+    </div>
   </div>
 
-  <!-- 匯入資料檔 -->
   <script src="data.js"></script>
   <script>
     const sidebar = document.getElementById("sidebar");
-    const content = document.getElementById("content");
+    const contentDiv = document.getElementById("content");
+    const monthList = document.getElementById("monthList");
+    const menuToggle = document.querySelector(".menu-toggle");
 
-    // 建立月份清單
+    // 生成月份清單
     for (let m = 1; m <= 12; m++) {
-      const monthDiv = document.createElement("div");
-      monthDiv.className = "month";
-      monthDiv.textContent = m + " 月";
-      
-      const dateContainer = document.createElement("div");
-      dateContainer.className = "dates";
+      const monthItem = document.createElement("li");
+      monthItem.textContent = m + "月";
+
+      const dayList = document.createElement("ul");
+      dayList.style.display = "none";
 
       if (records[m]) {
         Object.keys(records[m]).forEach(d => {
-          const dateDiv = document.createElement("div");
-          dateDiv.className = "date";
-          dateDiv.textContent = d + " 日";
-          dateDiv.onclick = () => showRecords(m, d);
-          dateContainer.appendChild(dateDiv);
+          const dayItem = document.createElement("li");
+          dayItem.textContent = d + "日";
+          dayItem.addEventListener("click", (e) => {
+            e.stopPropagation(); // 防止點擊冒泡到月份展開
+            showRecords(m, d);
+          });
+          dayList.appendChild(dayItem);
         });
       }
 
-      monthDiv.onclick = () => {
-        dateContainer.style.display = 
-          dateContainer.style.display === "block" ? "none" : "block";
-      };
+      monthItem.addEventListener("click", () => {
+        dayList.style.display = dayList.style.display === "block" ? "none" : "block";
+      });
 
-      sidebar.appendChild(monthDiv);
-      sidebar.appendChild(dateContainer);
+      monthItem.appendChild(dayList);
+      monthList.appendChild(monthItem);
     }
 
     // 顯示紀錄
     function showRecords(month, day) {
-      content.innerHTML = `<h2>${month}月${day}日 的展旭紀錄</h2>`;
+      contentDiv.innerHTML = `<h2>${month}月${day}日展旭紀錄</h2>`;
       const list = records[month][day];
+
       list.forEach(item => {
         const div = document.createElement("div");
         div.className = "record";
@@ -127,17 +177,28 @@
         }
         content.appendChild(div);
       });
+
+      // 手機版收合選單
+      sidebar.classList.remove("open");
     }
 
-    // 進站自動顯示今天紀錄
+    // 打開網站直接顯示今天的紀錄
     window.onload = () => {
       const today = new Date();
-      const month = today.getMonth() + 1; // JS 月份 0-11
+      const month = today.getMonth() + 1;
       const day = today.getDate();
+
       if (records[month] && records[month][day]) {
         showRecords(month, day);
+      } else {
+        contentDiv.innerHTML = "<p>請選擇日期以查看展旭紀錄</p>";
       }
     };
+
+    // 手機版選單開關
+    menuToggle.addEventListener("click", () => {
+      sidebar.classList.toggle("open");
+    });
   </script>
 </body>
 </html>
