--- a/index.html
+++ b/index.html
@@ -63,6 +63,16 @@
     <div class="heatmap-container">
       <h3>年度活動熱力圖</h3>
       <div class="heatmap" id="heatmap"></div>
+      <div class="heatmap-legend">
+        <span>少</span>
+        <div class="heatmap-day level-0" title="無記錄"></div>
+        <div class="heatmap-day level-1" title="少量記錄"></div>
+        <div class="heatmap-day level-2" title="中量記錄"></div>
+        <div class="heatmap-day level-3" title="較多記錄"></div>
+        <div class="heatmap-day level-4" title="大量記錄"></div>
+        <span>多</span>
+       </div>
+
     </div>
   </div>
 
