--- a/index.html
+++ b/index.html
@@ -1,6 +1,6 @@
 <!DOCTYPE html>
 <html lang="zh-Hant">
-  
+
 <head>
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1.0" />
@@ -78,12 +78,65 @@
 
   <div class="container">
     <nav id="sidebar">
-      <ul id="monthList"></ul>
+      <div class="sidebar-content">
+        <ul id="monthList"></ul>
+      </div>
+      <div class="sidebar-footer">
+        <button id="aboutBtn" class="about-button">關於展旭</button>
+      </div>
     </nav>
 
     <main class="content" id="content">
       <p>請於選單中選擇日期以查看展旭記錄</p>
     </main>
+  </div>
+
+  <div id="about-modal" class="modal">
+    <div class="modal-content">
+      <span class="close-button">&times;</span>
+      <h2>關於展旭</h2>      
+      <h3>現職</h3>
+        <p>三軍總醫院內科部心臟內科住院醫師</p>      
+      <h3>學歷</h3>
+        <p>國防醫學院醫學士<br>東京醫科齒科大學研修</p>      
+      <h3>教職</h3>
+        <p>國防醫學大學醫學院醫學系內科學科臨床教學指導人員</p>      
+      <h3>專長</h3>
+        <p>風景攝影<br>婚紗婚禮攝影<br>城市の銀河の火燒の合成の技術</p>
+      <h3>經歷</h3>
+        <p>海軍一級艦艦艇醫官<br> 
+          陸戰隊衛勤中隊長暨醫官<br> 
+          三軍總醫院一般醫學部住院醫師<br>
+          三軍總醫院內科部住院醫師<br>
+          三軍總醫院內科部心臟內科住院醫師<br>
+          亞洲醫學生聯會(AMSA)日本交流活動長<br>
+          台北市政府捷運觀光攝影作品提供<br>
+          2014 全國醫學生聯合會攝影組<br>
+          2017 台北市龍山國小親子共學攝影老師<br>
+          2021 高雄85大樓國慶煙火官方攝影<br>
+          2023 第十三屆全國醫學生聯合攝影大賽評審委員<br>
+          2024 台北101國慶煙火官方攝影</p>      
+      <h3>榮獲獎項</h3>
+        <p>2013 社團法人台灣醫學生全國攝影大賽佳作(願希望飛翔)<br>
+          2014 台灣之美風景攝影入圍<br>
+          2014 社團法人台灣醫學生全國攝影大賽佳作(袍，擇)<br>
+          2014 全國大醫盃攝影大賽第一名<br>
+          2015 校園百年攝影第二名<br>
+          2015 社團法人台灣醫學生全國攝影大賽大賽評審特別獎(扶持)&佳作(山巒晨浪之澎湃)<br>
+          2022 三軍總醫院攝影比賽：建築類冠軍，人文類冠軍</p>
+      <h3>訪談紀錄</h3>
+        <p>2018 【有志紀實】用照片說故事的醫學生：別說很多事做不來，其實只是限制尚未解開<br>
+          2018 醫科學生的攝影路｜有志青年-YouTube專訪<br>
+          2018 國外攝影經驗分享講座<br>
+          2018 飛碟夜光家族 專訪《夜光攝影展 - 達人誕生》 第16章<br>
+          2019 Imager X Taiwan 在 ｜旅記｡識、肆柒｜<br>
+          2019 Shadow Photography現代風景攝影線上課程｜風景攝影師訪談篇<br>
+          2021 三總醫師斜槓當攝影師 鏡頭下的台灣 美的太放肆</p>
+      <h3>學術著作</h3>
+        <p>Wu, C. H., Yang, F. C., Hsu, Y. C., & Chang, P. Y. (2023). Refractory orthostatic headache: A case report and literature review. Journal of Medical Sciences, 43(5), 240. 
+        <a href="https://doi.org/10.4103/jmedsci.jmedsci_230_22" target="_blank">https://doi.org/10.4103/jmedsci.jmedsci_230_22</a>
+        </p>
+    </div>
   </div>
 
   <footer>
