--- a/index.html
+++ b/index.html
@@ -183,6 +183,8 @@
       <a href="https://photos.app.goo.gl/eZCcNOezVExNxYWk2" target="_blank">展旭相簿(Google相簿)</a> | 
     </p>
   </footer>
+  
+  <button id="backToTopBtn" title="回到頂部">↑</button>
 
   <script src="data.js"></script>
   <script src="app.js"></script>
