--- a/index.html
+++ b/index.html
@@ -167,14 +167,12 @@
   <footer>
     <p>
       追蹤展旭：
-      <a href="https://www.facebook.com/wuxizu" target="_blank">Facebook 吳展旭(あきら)</a> | 
-      <a href="https://www.facebook.com/100007873209011/" target="_blank">Facebook 吳展旭</a> | 
-      <a href="https://www.instagram.com/wu_chan_hsu" target="_blank">Instagram wu_chan_hsu</a> | 
-      <a href="https://www.instagram.com/omg_taiwan" target="_blank">Instagram omg_taiwan</a> | 
-      <a href="https://www.instagram.com/omg_eat_jhan" target="_blank">Instagram omg_eat_jhan</a> | 
-      <a href="https://www.instagram.com/taiwan_med_notes" target="_blank">Instagram taiwan_med_notes</a> | 
-      <a href="https://www.instagram.com/hanhsu_studio" target="_blank">Instagram hanhsu_studio</a> | 
-      <a href="https://www.threads.net/@wu_chan_hsu" target="_blank">Threads wu_chan_hsu</a> |
+      <a href="https://www.facebook.com/wuxizu" target="_blank">吳展旭(あきら)</a> | 
+      <a href="https://www.instagram.com/wu_chan_hsu" target="_blank">wu_chan_hsu</a> | 
+      <a href="https://www.instagram.com/omg_taiwan" target="_blank">omg_taiwan</a> | 
+      <a href="https://www.instagram.com/omg_eat_jhan" target="_blank">omg_eat_jhan</a> | 
+      <a href="https://www.instagram.com/taiwan_med_notes" target="_blank">taiwan_med_notes</a> | 
+      <a href="https://www.instagram.com/hanhsu_studio" target="_blank">hanhsu_studio</a> | 
     </p>
     <p>
       展旭資料：
