--- a/index.html
+++ b/index.html
@@ -34,10 +34,11 @@
     <button id="prevDay">前一日</button>
     <button id="nextDay">後一日</button>
     <button id="randomBtn">隨機看</button>
+    <button id="shareBtn">分享</button>
     <button id="quizBtn">展旭歷史王</button>
     <button id="clozeBtn">展旭克漏字</button>
-    <button id="shareBtn">分享</button>
-    <button id="theme-toggle">深色模式</button>
+    <button id="favoritesBtn">我的收藏</button>
+    <button id="theme-toggle">深色模式</button>    
   </div>
   
   <button class="menu-toggle" type="button" aria-label="開啟或關閉選單">☰ 選單</button>
