--- a/index.html
+++ b/index.html
@@ -125,7 +125,7 @@
         <div id="quiz-feedback" class="quiz-feedback"></div>
       </div>
       <div id="quiz-results-view" class="quiz-results" style="display: none;">
-        <h2>測驗結束！</h2>
+        <h2>挑戰結束！</h2>
         <p>您的最終得分是：<span id="final-score">0</span> / 5</p>
         <div class="quiz-results-buttons">
           <button id="play-again-btn">再玩一次</button>
