--- a/index.html
+++ b/index.html
@@ -207,18 +207,18 @@
   <footer>
     <p>
       追蹤展旭：
-      <a href="https://www.facebook.com/wuxizu" target="_blank">吳展旭(あきら)</a> | 
-      <a href="https://www.instagram.com/wu_chan_hsu" target="_blank">wu_chan_hsu</a> | 
-      <a href="https://www.instagram.com/omg_taiwan" target="_blank">omg_taiwan</a> | 
-      <a href="https://www.instagram.com/omg_eat_jhan" target="_blank">omg_eat_jhan</a> | 
-      <a href="https://www.instagram.com/taiwan_med_notes" target="_blank">taiwan_med_notes</a> | 
-      <a href="https://www.instagram.com/hanhsu_studio" target="_blank">hanhsu_studio</a> | 
+      <a href="https://www.facebook.com/wuxizu" target="_blank">吳展旭(あきら)</a>
+      <a href="https://www.instagram.com/wu_chan_hsu" target="_blank">wu_chan_hsu</a>
+      <a href="https://www.instagram.com/omg_taiwan" target="_blank">omg_taiwan</a>
+      <a href="https://www.instagram.com/omg_eat_jhan" target="_blank">omg_eat_jhan</a>
+      <a href="https://www.instagram.com/taiwan_med_notes" target="_blank">taiwan_med_notes</a>
+      <a href="https://www.instagram.com/hanhsu_studio" target="_blank">hanhsu_studio</a>
     </p>
     <p>
       展旭資料：
-      <a href="http://Myrtenaster.quickconnect.to/d/s/q5W2iS1Ld64VeJhc0yJ4XznXY8uKxbqm/CCfQ8J52IdcGOzvNB3S4T_0tomcW_wNf-_rMgJcLW1wk" target="_blank">展旭資料庫(Synology Drive)</a> | 
-      <a href="http://Myrtenaster.quickconnect.to/mo/sharing/MpFJdFoNb" target="_blank">展旭資料庫(Synology Photos)</a> | 
-      <a href="https://photos.app.goo.gl/eZCcNOezVExNxYWk2" target="_blank">展旭相簿(Google相簿)</a> | 
+      <a href="http://Myrtenaster.quickconnect.to/d/s/q5W2iS1Ld64VeJhc0yJ4XznXY8uKxbqm/CCfQ8J52IdcGOzvNB3S4T_0tomcW_wNf-_rMgJcLW1wk" target="_blank">展旭資料庫(Synology Drive)</a>
+      <a href="http://Myrtenaster.quickconnect.to/mo/sharing/MpFJdFoNb" target="_blank">展旭資料庫(Synology Photos)</a>
+      <a href="https://photos.app.goo.gl/eZCcNOezVExNxYWk2" target="_blank">展旭相簿(Google相簿)</a>
     </p>
   </footer>
   
