--- a/index.html
+++ b/index.html
@@ -7,11 +7,19 @@
   <title>歷史上的展旭 - 每日回顧展旭事蹟</title>
   <meta name="description" content="一個紀錄與展示「吳展旭」歷史上每日事蹟的網站，您可以透過選擇日期或搜尋關鍵字，來探索展旭在過去的今天發生了什麼事" />
   
+  <!-- === PWA 相關標籤 === -->
+  <link rel="manifest" href="manifest.json">
+  <link rel="apple-touch-icon" href="icon-192.png">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="white">
+  <meta name="theme-color" content="#ffffff">
+
   <meta property="og:title" content="歷史上的展旭" />
   <meta property="og:description" content="探索展旭在過去的今天發生了什麼事" />
   <meta property="og:type" content="website" />
   <meta property="og:url" content="https://cervellomyrtenaster.github.io/chan_hsu_history/" />
-  <meta property="og:image" content="001.jpg" /> 
+  <meta property="og:image" content="og-image.jpg" /> 
   <link rel="canonical" href="https://cervellomyrtenaster.github.io/chan_hsu_history/" />
   <meta name="keywords" content="吳展旭,展旭" />
   
