--- a/index.html
+++ b/index.html
@@ -233,7 +233,8 @@
           2018 飛碟夜光家族 專訪《夜光攝影展 - 達人誕生》 第16章<br>
           2019 Imager X Taiwan 在 ｜旅記｡識、肆柒｜<br>
           2019 Shadow Photography現代風景攝影線上課程｜風景攝影師訪談篇<br>
-          2021 三總醫師斜槓當攝影師 鏡頭下的台灣 美的太放肆</p>
+          2021 三總醫師斜槓當攝影師 鏡頭下的台灣 美的太放肆<br>
+          2025 Lexus驚嘆生活誌2025冬季號(108期) 吳展旭×RX 轉換視角 在旅程中拾得詩意顯影</p>
       <h3>學術著作</h3>
         <p>Wu, C. H., Yang, F. C., Hsu, Y. C., & Chang, P. Y. (2023). Refractory orthostatic headache: A case report and literature review. Journal of Medical Sciences, 43(5), 240. 
         <a href="https://doi.org/10.4103/jmedsci.jmedsci_230_22" target="_blank">https://doi.org/10.4103/jmedsci.jmedsci_230_22</a>
